infrastructure/rke2/ansible/k8s/apps/cnp/ccnp-nginx-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-nginx-ingress-egress-to-all
spec:
  description: "Allow egress from NGINX ingress controller to all namespaces"
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      app.kubernetes.io/instance: rke2-ingress-nginx
  egress:
    - toEntities:
        - cluster
