infrastructure/rke2/ansible/k8s/apps/cnp/cnp-nginx-internet.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-nginx-ingress-http
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      app.kubernetes.io/instance: rke2-ingress-nginx
  ingress:
    - fromEntities:
        - world
        - remote-node
        - cluster
        - kube-apiserver
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
